--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea Pesci</title>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://rsms.me/">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link id="highlight-light" rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/default.min.css" disabled>
     <link id="highlight-dark" rel="stylesheet"
@@ -101,9 +102,10 @@
                                             class="rectangle-text"></span>
                                         <span class="rectangle-icon">🔍</span>
                                     </div>
-                                    <div x-show="section.isOpen">
-                                        <p x-text="section.content"></p>
+                                    <div x-show="section.isOpen" class="section-details">
+
                                         <div class="image-container" x-data="{ currentImageIndex: 0 }">
+                                            <p x-text="section.content"></p>
                                             <template x-for="(img, index) in section.images" :key="img">
                                                 <img :src="img" :class="{ 'hidden': currentImageIndex !== index }"
                                                     alt="Section Image">
@@ -118,9 +120,12 @@
                                         <div class="snippet-tabs">
                                             <template x-for="(snippet, index) in section.codeSnippets"
                                                 :key="snippet.file">
-                                                <button @click="toggleSnippet(snippet, index)"
-                                                    :class="{'active': activeIndex === index}"
-                                                    x-text="snippet.language"></button>
+                                                <div class="rectangle">
+                                                    <span @click="toggleSnippet(snippet, index)"
+                                                        :class="{'active': activeIndex === index}"
+                                                        x-text="snippet.language" class="rectangle-text"></span>
+                                                    <span class="rectangle-icon">🔍</span>
+                                                </div>
                                             </template>
                                         </div>
                                         <div class="snippet-content" x-show="activeSnippet">
@@ -182,6 +187,7 @@
             </div>
         </div>
     </div>
+    <div class="about-icon" onclick="toggleSections()"></div>
 </body>
 
 </html>
