--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 
 
-        <div class="content">
+        (<div class="content">
             <div class="loading" x-show="loading">
                 Loading...
             </div>
@@ -197,7 +197,7 @@
 
             </template>
 
-        </div>
+        </div>)
 
     </div>
     <!-- <div x-show="currentPage === 'form' && !loading">
